...
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/myTasks"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityUsernameTextView" />

    <Button
        android:id="@+id/MainActivityAllTasksButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/MainActivitySettingsImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="#673AB7"
        app:layout_constraintBottom_toBottomOf="@+id/MainActivityUsernameTextView"
        app:layout_constraintStart_toEndOf="@+id/MainActivityUsernameTextView"
...
